feat: Implement hybrid document sync to prevent line joining bug
feat: Add "Save All" button and unsaved changes handling

feat: Update save button text and enable state